--- a/StoreSearch/en.lproj/InfoPlist.strings
+++ b/StoreSearch/en.lproj/InfoPlist.strings
@@ -5,3 +5,4 @@
   Created by Shahriar Nasim Nafi on 22/9/20.
   Copyright © 2020 Shahriar Nasim Nafi. All rights reserved.
 */
+CFBundleDisplayName = "StoreSearch";
